masochist-lib/src/styles/site.css
/* ... */
ol, ul { padding-left: 0; margin-top: 0; }
ul ul, ul ol, ol ol, ol ul { margin: 1.5rem 0 1.5rem 3rem; font-size: 90%; }
li { margin-bottom: 1rem; }

code {
  padding: .2rem .5rem; margin: 0 .2rem; font-size: 90%;
  background: #F1F1F1; -webkit-box-decoration-break: clone; box-decoration-break: clone;
}

pre > code { display: block; overflow: auto; padding: 0; white-space: pre; }

pre {
  background: #f1f1f1;
  padding-bottom: 32px; padding-left: 32px; padding-top: 32px;
  position: relative; left: 50%; right: 50%;
  margin-left: -50vw; margin-right: -50vw; width: 100vw;
}

@media (min-width: 100ch) {
  pre {
    border-radius: 8px; left: auto; right: auto;
    margin-left: -32px; margin-right: -32px; width: auto;
  }
}

table { font-size: 1.7rem; }
th, td { padding: 12px 15px; text-align: left; border-bottom: 1px solid var(--color-separator); }
th:first-child, td:first-child { padding-left: 0; }
th:last-child, td:last-child { padding-right: 0; }

button, .button { margin-bottom: 1rem; }
input { margin-bottom: 1.5rem; }
pre, blockquote, table, p, ul, ol, form { margin-bottom: 2.5rem; }

.u-full-width { width: 100%; box-sizing: border-box; }

hr { margin-top: 3rem; margin-bottom: 3.5rem; border-width: 0; border-top: 1px solid var(--color-separator); }

blockquote { border-left: 3px solid var(--color-separator); padding-left: 1.5rem; margin-left: 0; }

.container:after, .row:after { content: ""; display: table; clear: both; }

/* App */
html { box-sizing: border-box; text-rendering: optimizeLegibility; }
*, *:before, *:after { box-sizing: inherit; }

.app { display: flex; flex-direction: column; min-height: 100vh; }
.app-content { flex: 1; font-family: Georgia, Palatino, serif; font-size: 2rem; }
article, section, .app-content { margin-top: 3rem; }
article:first-child { margin-top: initial; }
h1 a { text-decoration: none; }

.footnotes { font-size: .75em; }
.footnotes ol > li { color: #666; position: relative; }
.footnotes ol > li:target { color: #222; }
.footnotes ol > li:target::before {
  border-radius: 6px; border: 2px solid var(--color-accent);
  bottom: -8px; content: ""; left: -24px; pointer-events: none;
  position: absolute; right: -8px; top: -8px;
}
.footnotes-sep { border-color: var(--color-separator); }
.prerendered { overflow-wrap: break-word; }
.prerendered img { max-width: 100%; }
.prerendered ol, .prerendered ul { padding-left: 1em; }
.redlink { color: #f00; }
/* External link icon: match absolute URLs, excluding own domain. */
.prerendered a[href^="http"]:not([href*="wincent.dev"])::after {
  background-image: url(/icons/external-link.svg);
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: contain;
  content: ' ';
  display: inline-block;
  height: .6em;
  margin-left: .25rem;
  overflow: hidden;
  vertical-align: .1em;
  width: .6em;
}
button:disabled, input:disabled { opacity: .5; }

/* Nav */
nav { background-color: #141414; border-bottom: 1px solid #fff; width: 100%; }
nav li:first-child { align-items: center; display: flex; justify-content: space-between; }
nav li:first-child a { border-bottom: 1px solid #333; color: #eee; font-weight: bold; }
a.nav-link { color: #ccc; display: block; text-decoration: none; padding: 1rem 1rem; }
nav li:first-child a.nav-link { flex: 1; }
a.nav-link.active { background-color: #333; border: 0; color: #fff; }
.nav-link:focus, .nav-link:hover { background-color: #111; color: #fff; }
nav ul { list-style-type: none; margin: 0; }
nav li { display: none; margin: 0; }
nav li:first-child { display: flex; }
.nav-toggle-wrapper { border-left: 1px solid #333; border-bottom: 1px solid #333; }
.nav-toggle-wrapper:focus, .nav-toggle-wrapper:hover { background-color: #111; }
.nav-toggle {
  background-image: url(/icons/angle-double-down.svg);
  background-position: center; background-repeat: no-repeat; background-size: 60%;
  color: rgba(0, 0, 0, 0); cursor: pointer; overflow: hidden; padding: 1rem 0;
  text-transform: uppercase; transition: .2s ease-in-out; user-select: none; width: 32px;
}
.nav-open .nav-toggle { transform: rotate(180deg); transition: .2s ease-in-out; }
.nav-open li { display: inherit; }

@media (min-width: 550px) {
  nav li:first-child { display: inline-block; }
  nav li:first-child a { border: 0; }
  nav li { display: inline-block; }
  a.nav-link { display: inline-block; padding: .8rem 1rem; }
  a.nav-link:focus, a.nav-link:hover { background-color: inherit; }
  a.nav-link.active { background-clip: padding-box; border-bottom: 4px solid rgba(191, 63, 191, .25); margin-bottom: -4px; }
  .nav-open li { display: inline-block; }
  .nav-toggle-wrapper { display: none; }
}

/* Nav search */
.nav-search-wrapper { position: relative; padding: 6px 10px; }
.nav-search-wrapper .nav-search-input {
  height: 32px; padding: 4px 8px; margin: 0; width: 100%;
  background-color: #000; color: #ccc; border: 1px solid #555;
  border-radius: 4px; box-sizing: border-box;
  -webkit-appearance: none; -moz-appearance: none; appearance: none;
  font-size: 1.6rem;
}
.nav-search-wrapper .nav-search-input:focus { border-color: #33C3F0; outline: 0; }
.nav-search-wrapper .search-dropdown { top: 38px; }
.nav-search-wrapper .search-dropdown a,
.nav-search-wrapper .search-dropdown a:hover {
  border-bottom: 0; font-weight: normal;
}
.nav-search-wrapper .search-dropdown a { color: #222; }
.nav-search-wrapper .search-dropdown a:hover,
.nav-search-wrapper .search-dropdown li.active a { background: #f5f5f5; color: #222; }

@media (min-width: 550px) {
  .nav-search-wrapper { padding: 4px 0; }
  .nav-search-wrapper .nav-search-input { width: 235px; }
  .nav-search-wrapper .search-dropdown { right: auto; top: 36px; min-width: min(350px, 90vw); }
}

/* Footer */
footer { background: #f8f8f8; margin-top: 1.5rem; padding-top: 1.5rem; }
footer ul { list-style: none; }

/* Readability */
.readability { margin: 0 auto; max-width: 65ch; }

/* Article header */
.article-header { align-items: center; display: flex; justify-content: space-between; }
/* ... */

